Very basic router setup

--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
   </head>
   <body>
 
-    <div id="app"></div>
+  <div id="app">
+    <h1>Первое приложение!</h1>
+    <p>
+      <!-- используем компонент router-link для навигации -->
+      <!-- входной параметр `to` определяет URL для перехода -->
+      <!-- `<router-link>` по умолчанию отображается тегом `<a>` -->
+      <router-link to="/foo">Перейти к Foo</router-link>
+      <router-link to="/bar">Перейти к Bar</router-link>
+    </p>
+    <!-- отображаем тут компонент, для которого совпадает маршрут -->
+    <router-view></router-view>
+  </div>
+
+
     <script src="/dist/build.js"></script>
   </body>
 </html>
