--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.0/jquery.validate.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+    <script src="https://rawgit.com/RobinHerbots/jquery.inputmask/3.x/dist/jquery.inputmask.bundle.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+
     <title>vue-reg</title>
   </head>
   <body>
 
   <div id="app">
-    <h1>Первое приложение!</h1>
-    <p>
-      <!-- используем компонент router-link для навигации -->
-      <!-- входной параметр `to` определяет URL для перехода -->
-      <!-- `<router-link>` по умолчанию отображается тегом `<a>` -->
-      <router-link to="/foo">Перейти к Foo</router-link>
-      <router-link to="/bar">Перейти к Bar</router-link>
-    </p>
-    <!-- отображаем тут компонент, для которого совпадает маршрут -->
     <router-view></router-view>
   </div>
 
