--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://rawgit.com/RobinHerbots/jquery.inputmask/3.x/dist/jquery.inputmask.bundle.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
 
-    <title>vue-reg</title>
+    <title>Vue js registration</title>
   </head>
   <body>
 
